--- a/styles/variables/globals.scss
+++ b/styles/variables/globals.scss
@@ -3,7 +3,8 @@
     font-style: normal;
     font-weight: 400;
     src: local('Futura PT'),
-        url('/assets/fonts/FuturaPT-Book.woff') format('woff');
+        url('/GoszakazGroupMainPage/assets/fonts/FuturaPT-Book.woff')
+            format('woff');
 }
 
 :root {
