--- a/styles/sass/main_content.scss
+++ b/styles/sass/main_content.scss
@@ -111,10 +111,10 @@
                 background-size: cover;
             }
             &.image1 {
-                background-image: url('/GoszakazGroupMainPage/assets/images/image1.jpg');
+                background-image: url('https://demgerall.github.io/GoszakazGroupMainPage/assets/images/image1.jpg');
             }
             &.image2 {
-                background-image: url('/GoszakazGroupMainPage/assets/images/image2.jpg');
+                background-image: url('https://demgerall.github.io/GoszakazGroupMainPage/assets/images/image2.jpg');
             }
 
             .card_content {
