--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -21,7 +21,7 @@
   max-width: 100%;
   width: 100%;
   height: 300px;
-  background-image: url("/GoszakazGroupMainPage/assets/images/backgroundImage.jpg");
+  background-image: url("https://demgerall.github.io/GoszakazGroupMainPage/assets/images/backgroundImage.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
