--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -14,7 +14,7 @@
         width: 100%;
         height: 300px;
 
-        background-image: url('/GoszakazGroupMainPage/assets/images/backgroundImage.jpg');
+        background-image: url('https://demgerall.github.io/GoszakazGroupMainPage/assets/images/backgroundImage.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
